--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,85 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  height: 100px;
+  width: 100%;
+  background-color: #AB2A19;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: flex-start;
   color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  height: 50px;
+  width: 50px;
+  margin-left: 75px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.brand-title{
+  margin-left: 30px;
 }
+
+.body{
+  height: 100%;
+  display:flex;
+  justify-content: center;
+}
+
+.listed-products {
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+  
+}
+
+.no-pic{
+  height: 195px ;
+  width: 320px;
+  margin: 0 auto;
+}
+
+input {
+  height: 24px;
+  width:420px;
+}
+
+ button .button{
+   width: 100%;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+ 
+
+}
+
+.cancel-button{
+  height: 50px;
+  width: 75px;
+  margin-right: 200px;
+  background: #ED6B5A;
+  border-radius: 10px;
+  border: 0px;
+  margin-top: 10px;
+  
+}
+
+.add-button {
+  height: 50px;
+  width: 125px;
+  background: #ED6B5A;
+  border-radius: 10px;
+  border: 0px;
+}
+
+.add-products {
+  height: 520px;
+  width: 450px;
+  background: #3AD886;
+   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+  margin-top: 100px;
+  padding: 20px;
+}
+
